--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <h  >Welcome to Covid Assessment Website</h>
+            <h1>Welcome to Covid Assessment Website</h1>
         </header>
         <section>
             <h2>Please fill out this form:</h2>
